--- a/lab1_1/test/Objects/test.build_log.htm
+++ b/lab1_1/test/Objects/test.build_log.htm
@@ -17,24 +17,27 @@ Library Manager: ArmAr.exe V5.06 update 3 (build 300)
 Hex Converter:   FromElf.exe V5.06 update 3 (build 300)
 CPU DLL:         SARMCM3.DLL V5.21a
 Dialog DLL:      DARMCM1.DLL V1.14.0.0
-Target DLL:      Segger\JL2CM3.dll V2.99.23.0
+Target DLL:      CMSIS_AGDI.dll V1.26.5.0
 Dialog DLL:      TARMCM1.DLL V1.10.0.0
  
 <h2>Project:</h2>
-C:\Users\ThinkPad\Desktop\lab1_3_test\test.uvprojx
-Project File Date:  10/27/2017
+D:\RealTimeComp\lab1_1\Lab1\lab1_1\test\test.uvprojx
+Project File Date:  11/07/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 3 (build 300)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
+linking...
+Program Size: Code=7440 RO-data=288 RW-data=96 ZI-data=11664  
 ".\Objects\test.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\ThinkPad\Desktop\lab1_3_test\RTE
+  D:\RealTimeComp\lab1_1\Lab1\lab1_1\test\RTE
   C:\Keil_v5\ARM\PACK\Keil\Kinetis_KWxx_DFP\1.7.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Target not created.
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
